<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/linkEdit"
        android:layout_width="309dp"
        android:layout_height="44dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/prompt_link"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/serverLbl"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/serverLbl"
        app:layout_constraintTop_toBottomOf="@id/serverLbl"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/serverLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/server_lbl_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/linkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/link_btn_text"
        app:layout_constraintEnd_toEndOf="@id/linkEdit"
        app:layout_constraintStart_toStartOf="@id/linkEdit"
        app:layout_constraintTop_toBottomOf="@id/linkEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>